# graphed-knowledge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build_and_push.sh  compose.yaml  mcp_admin.py  mcp_server.py  pyproject.toml  requirements.txt
.gitea/workflows/: publish.yml
.github/workflows/: publish.yml
graphed_kb/: __init__.py  agent_memory.py  cli.py  graph.py  parser.py  retrieval.py
tests/: benchmark.py  test_graph.py  test_parser.py  test_retrieval.py
