[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphed-knowledge"
version = "0.5.0"
description = "Graph-structured knowledge base for AI agents — Obsidian-style Markdown nodes with wiki-links, PageRank, hybrid retrieval, and MCP server integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/C-SELLERS/graphed-knowledge"

[tool.hatch.build.targets.wheel]
packages = ["graphed_kb"]

[tool.hatch.build.targets.sdist]
include = [
  "graphed_kb/",
  "mcp_server.py",
  "README.md",
  "LICENSE",
]
